# localforge

./: .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  TEST_REPORT.md  inject_bugs.py  output.md  output1.md  output2.md  pyproject.toml  test_cloud_smoke.py  test_debug.py  test_integration.py  test_large_ruff.py  test_output.txt  test_scaffold.py  verify_bugs.py
.github/workflows/: ci.yml
.localforge/: commands.yml  config.yml  rules.md
localforge/: __init__.py  __main__.py
localforge/agent/: __init__.py  agents.py  base.py  display.py  orchestrator.py  state_manager.py
localforge/chat/: __init__.py  engine.py  engine.py.clean  session.py  session.py.clean  tools.py  tools.py.clean.bak
localforge/cli/: __init__.py  display.py  main.py
localforge/cloud/: __init__.py  agents.py  auth.py  client.py  engine.py  exceptions.py  prompts.py  session.py
localforge/context_manager/: __init__.py  assembler.py  budget.py
localforge/core/: __init__.py  config.py  git_utils.py  models.py  ollama_client.py  ollama_client.py.clean  prompt_templates.py
localforge/index/: __init__.py  indexer.py  search.py
localforge/patching/: __init__.py  patcher.py  validator.py
localforge/retrieval/: __init__.py  ranking.py  retriever.py
localforge/verifier/: __init__.py  runner.py
tests/: conftest.py  test_agents.py  test_chat_tools.py  test_cloud_engine.py  test_cloud_resilience.py  test_cross_file_bugs.py  test_e2e.py  test_enhancements.py  test_indexer.py  test_new_features.py  test_ollama_client.py  test_orchestrator.py  test_patcher.py  test_patching_smoke.py  test_retrieval.py  test_verifier_smoke.py
